<resources>
    <string name="app_name">FixerIOApiDisplay</string>
    <string name="api_access_key">73ce3fa9adc4c3a97ac75f6bce0aaa5a</string>

    <string name="date_label">Date:</string>
    <string name="rate_label">Rate:</string>
    <string name="currency_code_label">Currency code:</string>
    <string name="currency_name_label">Currency name:</string>

    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_title">OK</string>

    <string name="no_more_data_dialog_title">No more data</string>
    <string name="no_more_data_dialog_message">You have reached the last available data</string>
    <string name="no_more_data_dialog_button_title">OK</string>

    <string name="next_page_loading">Loading next page. Please wait…</string>

    <string name="flag">Currency country of origin flag</string>
</resources>